[package]
name = "pogostick"
version = "0.1.0"
authors = ["William Henderson <william-henderson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.13.2"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.0"
bit_field = "0.9.0"
hex = { version = "0.4.2", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
#run-command = ["qemu-system-x86_64", "-L", "D:\\Programs\\qemu", "-drive", "format=raw,file={}", "-hda", "disk.img"]
run-command = ["sh", "build.sh"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"